Graphs changes, CSS and fixed date format in analyze-item

--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -23,7 +23,6 @@
 			border:1px solid teal;
 			margin-right: 5px;
 			background-color: #f2fbf7;
-
 		}
 		
 		a {
@@ -313,14 +312,15 @@
 				//this.set('metrics1', metricsArray1);
 				//this.set('metrics2', metricsArray2);
 
-				this.set('processedBacktest.startDate',this.formatDate(this.backtest.settings.start));
-				this.set('processedBacktest.endDate',this.formatDate(this.backtest.settings.end));
+				this.set('processedBacktest.startDate',this.formatDate(this.backtest.settings.startDate));
+				this.set('processedBacktest.endDate',this.formatDate(this.backtest.settings.endDate));
 				this.set('processedBacktest.status', this.backtest.status.charAt(0).toUpperCase() + this.backtest.status.slice(1));
 				this.set('processedBacktest.createdAt', this.formatDateTime(this.backtest.createdAt));
 				
 			},
 
 			formatDate: function(date) {
+
 				var today = new Date(date);
 				today.setDate(today.getDate());
 				var dd = today.getDate();
@@ -348,7 +348,11 @@
 			  	hours = hours ? hours : 12; // the hour '0' should be '12'
 			  	minutes = minutes < 10 ? '0'+minutes : minutes;
 		  		var strTime = hours + ':' + minutes + ' ' + ampm;
-			  	return  date.getDate()+ "/" + (date.getMonth()+1) + "/" + date.getFullYear() + "  " + strTime;
+		  		var mm = date.getMonth()+1;
+		  		mm = mm > 9 ? mm : '0'+mm.toString();
+		  		var dd = date.getDate();
+		  		dd = dd > 9 ? dd  : '0' + dd.toString();
+			  	return  dd + "/" + mm + "/" + date.getFullYear() + "  " + strTime;
 			},
 
 			isBacktestActive: function(backtest) {
