--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -19,7 +19,7 @@
         #userid {
             margin-right: 10px;
             margin-bottom: 10px;
-            color: #24293d;
+            --color: #24293d;
         }
 
         #name {
@@ -43,8 +43,9 @@
         }
 
         #top {
-            background-color: #d0f0e1;--#99ced4;--teal;
+            background-color: #008080;
             border-bottom: 1px solid #dfdfdf;
+            color:white !important;
         }
 
         span {
