--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -507,6 +507,8 @@
 
       } else {
         this.strategies = [];
+        this.checkedItems = {};
+        this.checkedCount = 0;
       }
     }
 
