Bug Fix: Previous post text showed up while creating a new post. Fixed!

--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -366,6 +366,7 @@
 
                 if (this.$$('#editor')) {
                     this.$$('#editor').setContent("");
+                    this.$$('#editor').focus();
                 }
 
                 if (this.$$('#topicInput')){
