Minor bug fixes!

--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -281,6 +281,11 @@
       },
 
       format: function(date) {
+        var options = {
+            weekday: "long", year: "numeric", month: "short",
+            day: "numeric", hour: "2-digit", minute: "2-digit"
+        };
+
         return new Date(date).toLocaleTimeString("en-us", options);
       },
 
