--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -526,6 +526,7 @@
             }
           } else {
             this.strategyId = "";
+            this.isRunning  = false;
           }
         }
 
